fix alignment

--- a/components/ChartPage/More.module.scss
+++ b/components/ChartPage/More.module.scss
@@ -62,6 +62,10 @@
         display: flex;
         align-items: center;
         margin-left: 1rem;
+
+        &.withButton {
+          height: 1.75rem;;
+        }
       }
     }
 
